force-app/main/default/objects/User/fields/Admin_Notes__c.field-meta.xml
<CustomField>
    <fullName>Admin_Notes__c</fullName>
    <inlineHelpText>Used to store notes about the user&apos;s setup for future reference.</inlineHelpText>
    <label>Admin Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>