force-app/main/default/objects/User/fields/Analysis__c.field-meta.xml
<CustomField>
    <fullName>Analysis__c</fullName>
    <inlineHelpText>These users are included in metric/ROI analysis as of Aug 2009.</inlineHelpText>
    <label>Analysis</label>
    <length>50</length>
    <type>Text</type>
</CustomField>