force-app/main/default/objects/User/fields/AVP_EID__c.field-meta.xml
<CustomField>
    <fullName>AVP_EID__c</fullName>
    <label>AVP/GSM EID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>