force-app/main/default/objects/User/fields/B2B_Send_Reset_Email__c.field-meta.xml
<CustomField>
    <fullName>B2B_Send_Reset_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field to filter the users for the reset email</description>
    <label>B2B Send Reset Email</label>
    <type>Checkbox</type>
</CustomField>