force-app/main/default/objects/User/fields/BDM_RVP_Email__c.field-meta.xml
<CustomField>
    <fullName>BDM_RVP_Email__c</fullName>
    <label>Email - BDM/RVP</label>
    <type>Email</type>
</CustomField>