force-app/main/default/objects/User/fields/BM_EID__c.field-meta.xml
<CustomField>
    <fullName>BM_EID__c</fullName>
    <label>BM/SM EID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>