force-app/main/default/objects/User/fields/Contract_Line_Approver_Override__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Approver_Override__c</fullName>
    <description>Permanent override for routing of Contract Line Item Approval records</description>
    <inlineHelpText>Permanent override for routing of Contract Line Item Approval records</inlineHelpText>
    <label>Contract Line Approver Override</label>
    <relationshipName>CLIAs</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>