force-app/main/default/objects/User/fields/CS_Telephony_Login_ID__c.field-meta.xml
<CustomField>
    <fullName>CS_Telephony_Login_ID__c</fullName>
    <description>Used for ANI routing, unique to each CSP

Changed 8/2017 by Bluewolf to a Text field for ability to successfully query by Cisco integration for routing.

2022/04/06: Adam Ross changed field length to 12 characters per request to use the +1########## format for B+S routing</description>
    <externalId>true</externalId>
    <label>Agent ID for Phones</label>
    <length>12</length>
    <type>Text</type>
</CustomField>