force-app/main/default/objects/User/fields/Date_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Date_Deactivated__c</fullName>
    <inlineHelpText>Note the date that the user is deactivated.  This date is used for a weekly report to send to the data warehouse team for activations/deactivations.</inlineHelpText>
    <label>Date Deactivated</label>
    <type>Date</type>
</CustomField>