force-app/main/default/objects/User/fields/Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Reason__c</fullName>
    <label>Deactivation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Termination email</fullName>
            </value>
            <value>
                <fullName>Inactivity</fullName>
            </value>
            <value>
                <fullName>Request from manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Temporary Leave of Absence</fullName>
            </value>
            <value>
                <fullName>Duplicate User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>