force-app/main/default/objects/User/fields/Default_Servicing_Division__c.field-meta.xml
<CustomField>
    <fullName>Default_Servicing_Division__c</fullName>
    <label>Default Servicing Division</label>
    <length>60</length>
    <type>Text</type>
</CustomField>