force-app/main/default/objects/User/fields/Delegation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Delegation_End_Date__c</fullName>
    <description>End Date for temporary override for routing of Contract Line Item Approval records</description>
    <inlineHelpText>End Date for temporary override for routing of Contract Line Item Approval records</inlineHelpText>
    <label>Delegation End Date</label>
    <type>Date</type>
</CustomField>