force-app/main/default/objects/User/fields/Delegation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Delegation_Start_Date__c</fullName>
    <description>Start Date for temporary override for routing of Contract Line Item Approval records</description>
    <inlineHelpText>Start Date for temporary override for routing of Contract Line Item Approval records</inlineHelpText>
    <label>Delegation Start Date</label>
    <type>Date</type>
</CustomField>