force-app/main/default/objects/User/fields/DIR_EID__c.field-meta.xml
<CustomField>
    <fullName>DIR_EID__c</fullName>
    <label>DIR EID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>