force-app/main/default/objects/User/fields/Dir_Email__c.field-meta.xml
<CustomField>
    <fullName>Dir_Email__c</fullName>
    <label>Email - Level 3</label>
    <type>Email</type>
</CustomField>