force-app/main/default/objects/User/fields/Email_DMD__c.field-meta.xml
<CustomField>
    <fullName>Email_DMD__c</fullName>
    <label>Email - DMD</label>
    <type>Email</type>
</CustomField>