force-app/main/default/objects/User/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <description>Used as external key to User record for Evo integration</description>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>