force-app/main/default/objects/User/fields/GSM_Email__c.field-meta.xml
<CustomField>
    <fullName>GSM_Email__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>AVP Mail Id</description>
    <label>Email - Level 2</label>
    <type>Email</type>
</CustomField>