force-app/main/default/objects/User/fields/Inherit_Reporting_Hierarch__c.field-meta.xml
<CustomField>
    <fullName>Inherit_Reporting_Hierarch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Inherit Reporting Hierarch</label>
    <type>Checkbox</type>
</CustomField>