force-app/main/default/objects/User/fields/Last_Initial__c.field-meta.xml
<CustomField>
    <fullName>Last_Initial__c</fullName>
    <description>Last initial. For email templates.</description>
    <formula>LEFT(LastName,1) &amp; &quot;.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Initial</label>
    <type>Text</type>
</CustomField>