force-app/main/default/objects/User/fields/Legacy_U__c.field-meta.xml
<CustomField>
    <fullName>Legacy_U__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legacy Unisource users will all be &quot;checked&quot; so we can identify them separate from Legacy X and users that joined after the merge.</description>
    <label>Legacy U</label>
    <type>Checkbox</type>
</CustomField>