force-app/main/default/objects/User/fields/Lightning_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Lightning_Conversion_Date__c</fullName>
    <label>Lightning Conversion Date</label>
    <type>Date</type>
</CustomField>