force-app/main/default/objects/User/fields/MS_Key__c.field-meta.xml
<CustomField>
    <fullName>MS_Key__c</fullName>
    <label>MS Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>