force-app/main/default/objects/User/fields/MSAVP__c.field-meta.xml
<CustomField>
    <fullName>MSAVP__c</fullName>
    <formula>name_gsm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSAVPGSM</label>
    <type>Text</type>
</CustomField>