force-app/main/default/objects/User/fields/MSBM__c.field-meta.xml
<CustomField>
    <fullName>MSBM__c</fullName>
    <formula>name_zm_sm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSBMSM</label>
    <type>Text</type>
</CustomField>