force-app/main/default/objects/User/fields/MSDir__c.field-meta.xml
<CustomField>
    <fullName>MSDir__c</fullName>
    <formula>name_dir__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSDir</label>
    <type>Text</type>
</CustomField>