force-app/main/default/objects/User/fields/MSPres__c.field-meta.xml
<CustomField>
    <fullName>MSPres__c</fullName>
    <formula>name_pres__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSPres</label>
    <type>Text</type>
</CustomField>