force-app/main/default/objects/User/fields/MSSVP__c.field-meta.xml
<CustomField>
    <fullName>MSSVP__c</fullName>
    <formula>name_bdm_rvp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSSVPRVP</label>
    <type>Text</type>
</CustomField>