force-app/main/default/objects/User/fields/MSTeamLead__c.field-meta.xml
<CustomField>
    <fullName>MSTeamLead__c</fullName>
    <formula>name_team_lead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSTeamLead</label>
    <type>Text</type>
</CustomField>