force-app/main/default/objects/User/fields/MSVP__c.field-meta.xml
<CustomField>
    <fullName>MSVP__c</fullName>
    <formula>name_vp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSVP</label>
    <type>Text</type>
</CustomField>