force-app/main/default/objects/User/fields/name_bdm_rvp__c.field-meta.xml
<CustomField>
    <fullName>name_bdm_rvp__c</fullName>
    <label>Name - BDM/RVP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>