force-app/main/default/objects/User/fields/name_dir__c.field-meta.xml
<CustomField>
    <fullName>name_dir__c</fullName>
    <label>Name - Level 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>