force-app/main/default/objects/User/fields/name_dmd__c.field-meta.xml
<CustomField>
    <fullName>name_dmd__c</fullName>
    <label>Name - DMD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>