force-app/main/default/objects/User/fields/name_gsm__c.field-meta.xml
<CustomField>
    <fullName>name_gsm__c</fullName>
    <label>Name - Level 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>