force-app/main/default/objects/User/fields/Name_Manager__c.field-meta.xml
<CustomField>
    <fullName>Name_Manager__c</fullName>
    <formula>Manager.FirstName  &amp; &quot; &quot; &amp;  Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name - Manager</label>
    <type>Text</type>
</CustomField>