force-app/main/default/objects/User/fields/name_pres__c.field-meta.xml
<CustomField>
    <fullName>name_pres__c</fullName>
    <label>Name - Sales Leader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>