force-app/main/default/objects/User/fields/name_team_lead__c.field-meta.xml
<CustomField>
    <fullName>name_team_lead__c</fullName>
    <label>Name - TL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>