force-app/main/default/objects/User/fields/name_vp__c.field-meta.xml
<CustomField>
    <fullName>name_vp__c</fullName>
    <label>Name - Level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>