force-app/main/default/objects/User/fields/name_zm_sm__c.field-meta.xml
<CustomField>
    <fullName>name_zm_sm__c</fullName>
    <label>Name - Level 3a</label>
    <length>255</length>
    <type>Text</type>
</CustomField>