force-app/main/default/objects/User/fields/Network_Id__c.field-meta.xml
<CustomField>
    <fullName>Network_Id__c</fullName>
    <externalId>true</externalId>
    <label>Network Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>