force-app/main/default/objects/User/fields/OSM_Override__c.field-meta.xml
<CustomField>
    <fullName>OSM_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OSM Override</label>
    <type>Checkbox</type>
</CustomField>