force-app/main/default/objects/User/fields/PRES_EID__c.field-meta.xml
<CustomField>
    <fullName>PRES_EID__c</fullName>
    <label>PRES EID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>