force-app/main/default/objects/User/fields/Pres_Email__c.field-meta.xml
<CustomField>
    <fullName>Pres_Email__c</fullName>
    <label>Email - Sales Leader</label>
    <type>Email</type>
</CustomField>