force-app/main/default/objects/User/fields/Pricing_Delegated_Approval_Email__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Delegated_Approval_Email__c</fullName>
    <label>Pricing Delegated Approval Email</label>
    <type>Email</type>
</CustomField>