force-app/main/default/objects/User/fields/Pricing_Delegated_Approver__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Delegated_Approver__c</fullName>
    <description>Temporary override for routing of Contract Line Item Approval records based on Delegation Start and End Date</description>
    <inlineHelpText>Temporary override for routing of Contract Line Item Approval records based on Delegation Start and End Date</inlineHelpText>
    <label>Pricing Delegated Approver</label>
    <relationshipName>PricingDelegatedApprover</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>