force-app/main/default/objects/User/fields/Primary_Sales_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep_ID__c</fullName>
    <label>Primary Sales Rep ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>