force-app/main/default/objects/User/fields/Profile_Display__c.field-meta.xml
<CustomField>
    <fullName>Profile_Display__c</fullName>
    <description>Created for use on mini page layouts</description>
    <formula>Profile.Name</formula>
    <label>Profile</label>
    <type>Text</type>
</CustomField>