force-app/main/default/objects/User/fields/Rep_Count__c.field-meta.xml
<CustomField>
    <fullName>Rep_Count__c</fullName>
    <formula>IF( CONTAINS(UPPER( UserRole.Name) , &quot;REP&quot;) ,1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>