force-app/main/default/objects/User/fields/Reporting_Hierarchy_Update_Needed__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Hierarchy_Update_Needed__c</fullName>
    <formula>OR (

name_zm_sm__c != Manager.name_zm_sm__c,
name_gsm__c != Manager.name_gsm__c,
name_bdm_rvp__c != Manager.name_bdm_rvp__c,
name_pres__c != Manager.name_pres__c,
name_team_lead__c != Manager.name_team_lead__c,
name_dir__c != Manager.name_dir__c,
name_dmd__c != Manager.name_dmd__c,
name_vp__c != Manager.name_vp__c,

ZM_SM_Email__c != Manager.ZM_SM_Email__c,
GSM_Email__c != Manager.GSM_Email__c,
BDM_RVP_Email__c != Manager.BDM_RVP_Email__c,
Pres_Email__c != Manager.Pres_Email__c,
TL_Email__c != Manager.TL_Email__c,
Dir_Email__c != Manager.Dir_Email__c,
Email_DMD__c != Manager.Email_DMD__c,
Vice_President_Email__c != Manager.Vice_President_Email__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Hierarchy Update Needed</label>
    <type>Checkbox</type>
</CustomField>