force-app/main/default/objects/User/fields/Review_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Review_Hierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>These users need to have their hierarchy reviewed ASAP.</inlineHelpText>
    <label>Review Hierarchy</label>
    <type>Checkbox</type>
</CustomField>