force-app/main/default/objects/User/fields/Role_Display__c.field-meta.xml
<CustomField>
    <fullName>Role_Display__c</fullName>
    <description>Copies the selected Role into this field so it can be displayed on the Mini Page Layout</description>
    <formula>UserRole.Name</formula>
    <label>Role</label>
    <type>Text</type>
</CustomField>