force-app/main/default/objects/User/fields/Salesloft_License__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not automatically assigned. Licenses determined by Sales Manager.</description>
    <inlineHelpText>Not automatically assigned. Licenses determined by Sales Manager.</inlineHelpText>
    <label>Salesloft License</label>
    <type>Checkbox</type>
</CustomField>