force-app/main/default/objects/User/fields/SVP_EID__c.field-meta.xml
<CustomField>
    <fullName>SVP_EID__c</fullName>
    <label>SVP/RVP EID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>