force-app/main/default/objects/User/fields/TeamLead_EID__c.field-meta.xml
<CustomField>
    <fullName>TeamLead_EID__c</fullName>
    <label>TeamLead EID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>