force-app/main/default/objects/User/fields/TL_Email__c.field-meta.xml
<CustomField>
    <fullName>TL_Email__c</fullName>
    <label>Email - TL</label>
    <type>Email</type>
</CustomField>