force-app/main/default/objects/User/fields/TSB__c.field-meta.xml
<CustomField>
    <fullName>TSB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TSB</label>
    <type>Checkbox</type>
</CustomField>