force-app/main/default/objects/User/fields/Unrestricted_User__c.field-meta.xml
<CustomField>
    <fullName>Unrestricted_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is True if user has Allow Forecasting, Mobile User, or Offline User checked. Updated via DemandTools process.</inlineHelpText>
    <label>Unrestricted User?</label>
    <type>Checkbox</type>
</CustomField>