force-app/main/default/objects/User/fields/User_Group__c.field-meta.xml
<CustomField>
    <fullName>User_Group__c</fullName>
    <description>This field is used in reports to show users by geography in Canada.</description>
    <formula>IF(CONTAINS( UserRole.Name , &quot;Mondrian Hall&quot;) , &quot;Mondrian Hall&quot;,
IF( CONTAINS(UserRole.Name , &quot;CAN - BC&quot;) , &quot;BC&quot;,  
IF( CONTAINS(UserRole.Name , &quot;CAN - Western&quot;) , &quot;Western&quot;,
IF( CONTAINS(UserRole.Name , &quot;CAN - Prairies&quot;) , &quot;Prairies&quot;,  
IF( CONTAINS (UserRole.Name , &quot;CAN - SWO&quot;) , &quot;SWO&quot;, 
IF( CONTAINS (UserRole.Name , &quot;CAN - Fordis&quot;) , &quot;Fordis&quot;, 
IF( CONTAINS (UserRole.Name , &quot;CAN - Specifications&quot;) , &quot;Spec Reps&quot;, 
IF( CONTAINS (UserRole.Name , &quot;East&quot;) , &quot;Eastern&quot; ,  
IF( CONTAINS (UserRole.Name , &quot;CAN - Eastern&quot;) , &quot;Eastern&quot; ,  
IF( CONTAINS(UserRole.Name , &quot;CAN - Supplier&quot;) , &quot;Supplier Relations&quot; ,
IF( CONTAINS(UserRole.Name , &quot;CAN - National&quot;) , &quot;National&quot; ,
IF( CONTAINS (UserRole.Name , &quot;CAN - Exec&quot;) , &quot;Exec Sponsor&quot; ,  
IF( CONTAINS (UserRole.Name , &quot;CAN - Finance&quot;) , &quot;Finance&quot; , 
IF( CONTAINS (UserRole.Name , &quot;CAN - Marketing&quot;) , &quot;Marketing&quot; , 
IF( CONTAINS(UserRole.Name , &quot;CAN - President&quot;) , &quot;President&quot; ,
&quot;&quot;) 
)
)
)
)
)
)
) 
)
) 
)
) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Group</label>
    <type>Text</type>
</CustomField>