force-app/main/default/objects/User/fields/Vice_President_Email__c.field-meta.xml
<CustomField>
    <fullName>Vice_President_Email__c</fullName>
    <label>Email - Level 1</label>
    <type>Email</type>
</CustomField>