force-app/main/default/objects/User/fields/VIQ_UPPER_NetworkId__c.field-meta.xml
<CustomField>
    <fullName>VIQ_UPPER_NetworkId__c</fullName>
    <description>Uppercase of the NetworkId to accommodate for case sensitivity in the Zilliant db when querying for Users to set as the owner of VIQ opportunities</description>
    <formula>UPPER( Network_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>UPPER(Network_Id__c)</inlineHelpText>
    <label>VIQ UPPER NetworkId</label>
    <type>Text</type>
</CustomField>