force-app/main/default/objects/User/fields/VP_EID__c.field-meta.xml
<CustomField>
    <fullName>VP_EID__c</fullName>
    <label>VP EID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>