force-app/main/default/objects/User/fields/Working_Status__c.field-meta.xml
<CustomField>
    <fullName>Working_Status__c</fullName>
    <label>Working Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>End of Day</fullName>
            </value>
            <value>
                <fullName>In Office</fullName>
                <default>true</default>
                <label>In Office</label>
            </value>
            <value>
                <fullName>Out of Office Received</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>