force-app/main/default/objects/User/fields/ZM_SM_Email__c.field-meta.xml
<CustomField>
    <fullName>ZM_SM_Email__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>Capture Business manager email id.</description>
    <label>Email - Level 3a</label>
    <type>Email</type>
</CustomField>