force-app/main/default/objects/User/fields/zpf__ZilliantActive__c.field-meta.xml
<CustomField>
    <fullName>zpf__ZilliantActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field indicating that this user is active in zCloud.</description>
    <label>Active in Zilliant</label>
    <type>Checkbox</type>
</CustomField>