force-app/main/default/objects/User/validationRules/Alias_Must_Equal_Network_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Alias_Must_Equal_Network_ID</fullName>
    <active>true</active>
    <errorConditionFormula>and (
IsActive=true, 
Lower(Alias) &lt;&gt;  Lower(Network_Id__c),
ProfileId &lt;&gt; &quot;00e70000000zpJJ&quot;,
ProfileId &lt;&gt; &quot;00e5w000001xxOO&quot;,
ProfileId &lt;&gt; &quot;00e5w000001xxOJ&quot;,
Profile.Name &lt;&gt; &quot;Salesforce API Only System Integrations&quot;,
Profile.Name &lt;&gt; &quot;API admin&quot;
)</errorConditionFormula>
    <errorDisplayField>Alias</errorDisplayField>
    <errorMessage>Unisource standards require the user Alias to equal the user Network ID for Salesforce licenses. Please ensure that the Alias matches the Network ID and save again.</errorMessage>
</ValidationRule>