force-app/main/default/objects/User/validationRules/Country_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_is_Required</fullName>
    <active>true</active>
    <description>Country must be USA, CAN or MEX- this has an impact on reporting and account/opp currency.</description>
    <errorConditionFormula>AND( 
Country &lt;&gt; &quot;CAN&quot;, 
Country &lt;&gt; &quot;USA&quot;, 
Country &lt;&gt; &quot;MEX&quot;, 
IsActive=true 
)</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Country must be CAN, USA or MEX</errorMessage>
</ValidationRule>